<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0DBDB"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <ImageButton
            android:id="@+id/ib_regist_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@drawable/drawable_btn_back"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_regist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_title"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/ib_regist_back" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_pic"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/login_text_bg"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_regist_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/regist_tip_user"
                        android:inputType="text"
                        android:maxLength="11"
                        android:text="@string/demoText"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_regist_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/ic_input_delete"
                    android:contentDescription="@null"
                    android:paddingTop="4dip"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_regist_password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/regist_tip_pwd1"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:text="@string/demoText"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_password"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/et_regist_password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/regist_tip_pwd2"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:text="@string/demoText"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/regist_btn_text" />

    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="7dip"
        android:text="@string/regist_login"
        android:textColor="#aa0000ff"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_gravity="center_horizontal" />

</LinearLayout>